@@ -1,0 +1,5 @@
+# Sample PAM Configuration for Small Footprint CIM Broker
+auth       required     pam_unix.so
+account    required     pam_unix.so
+password   required     pam_unix.so
+session    required     pam_unix.so
